--- a/index.html
+++ b/index.html
@@ -333,8 +333,19 @@
       </p>
       <div class="container">
         <img class="certificate" src="images/certificate/GIT.png" />
+        <img class="certificate" src="images/certificate/CV.jpg" />
         <img class="certificate" src="images/certificate/CSS.png" />
         <img class="certificate" src="images/certificate/html.png" />
+        <img class="certificate" src="images/certificate/dart.jpg" />
+        <img class="certificate" src="images/certificate/FLETTER1.jpg" />
+        <img class="certificate" src="images/certificate/FLETTER2.jpg" />
+        <img class="certificate" src="images/certificate/Attack Techniques.jpg" />
+        <img class="certificate" src="images/certificate/career path in cuber secusity.jpg" />
+        <img class="certificate" src="images/certificate/Cyber Security Basics.jpg" />
+        <img class="certificate" src="images/certificate/Inrtoduction to Cyber Security.jpg" />
+        <img class="certificate" src="images/certificate/Protect Systems from Penetrations.jpg" />
+        <img class="certificate" src="images/certificate/gomycode.jpg" />
+        <img class="certificate" src="images/certificate/cyber security.jpg" />
       </div>
     </section>
     <script src="Scroll.js"></script>
