--- a/index.html
+++ b/index.html
@@ -29,7 +29,16 @@
         <li>
           <a href="#" onclick="scrollToProjects()" class="textStyle">project</a>
         </li>
-        <li><a href="#" class="textStyle">Contant Me</a></li>
+        <li>
+          <a href="#" onclick="scrollToCertificate()" class="textStyle"
+            >certificate</a
+          >
+        </li>
+        <li>
+          <a href="#" onclick="scrollToContactMe()" class="textStyle"
+            >Contant Me</a
+          >
+        </li>
       </ul>
       <button>
         <p>Resume</p>
@@ -326,7 +335,7 @@
       </div>
     </section>
     <!----------------------------------certificate----------------------------------------------->
-    <section class="mySkills" style="margin-bottom: 100px">
+    <section id="certificate" class="mySkills" style="margin-bottom: 100px">
       <p id="skills" style="text-align: center; padding-bottom: 20px">
         <span class="fontText" style="font-weight: 400">my</span
         ><span class="fontText" style="font-weight: 700"> Testimony</span>
@@ -479,6 +488,10 @@
           </div>
         </div>
       </div>
+    </section>
+    <!------------------------------------------------------------------------------------->
+    <section id="contactMe">
+      <p>fffffffffffffffffff</p>
     </section>
     <script src="Scroll.js"></script>
   </body>
