--- a/index.html
+++ b/index.html
@@ -248,34 +248,23 @@
       </div>
     </section>
     <!--------------------------------------------------------------------------------->
-    <section
-      class="myProjects"
-      id="Projects"
-      style="
-        background-color: black;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-      "
-    >
+    <section class="myProjects" id="Projects">
       <p style="padding: 20px; text-align: center">
         <span class="fontText" style="font-weight: 400; color: #fff">my</span
         ><span class="fontText" style="font-weight: 700; color: #fff">
           Projects</span
         >
       </p>
-      <div style="display: flex; margin-bottom: 100px; gap: 70px">
-        <div class="container">
+      <div class="container" style="flex-wrap: wrap">
+        <div>
           <img
             style="border-radius: 15px"
             src="./images/Capture.PNG"
-            width="400px"
             height="300px"
             alt=""
           />
         </div>
-        <div class="container" style="padding: 0 10px">
+        <div>
           <span class="font1">01</span>
           <p class="font2">Mobile Application</p>
           <p class="font3">
@@ -299,14 +288,14 @@
         </div>
       </div>
 
-      <div style="display: flex; margin-bottom: 100px; gap: 70px">
-        <div class="container" style="padding: 0 10px">
+      <div class="container" style="flex-wrap: wrap-reverse">
+        <div>
           <span class="font1">02</span>
           <p class="font2">Mobile Application</p>
           <p class="font3">
             I have developed a login and signup screen using React Native with
-            TypeScript. As for the backend, I utilized the Express framework and
-            MongoDB.
+            TypeScript<br />. As for the backend, I utilized the Express
+            framework and MongoDB.
           </p>
           <p class="font3">
             Designer:
@@ -314,7 +303,7 @@
               target="_blank"
               style="text-decoration: none; color: rgb(165, 177, 201)"
               href="https://www.figma.com/@doganoguz"
-              >Doğan Oğuz</a
+              >@doganoguz</a
             >
           </p>
           <a
@@ -323,7 +312,7 @@
             ><i class="fa-solid fa-share-from-square" style="color: #a1a5ad"></i
           ></a>
         </div>
-        <div class="container">
+        <div>
           <img
             style="border-radius: 15px"
             src="./images/Web_Photo_Editor.jpg"
@@ -405,6 +394,13 @@
             <h4>
               ejpt <br /><span style="font-size: 12px"> Attack Techniques</span>
             </h4>
+          </div>
+        </div>
+
+        <div class="wrapper">
+          <img class="certificate" src="images/certificate/dom.png" />
+          <div class="effect">
+            <h4>dom</h4>
           </div>
         </div>
 
