--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body>
+  <body style="display: flex; flex-direction: column; gap: 70px">
     <!--------------------------------------------------------------------------------->
     <nav class="container_Nav">
       <div style="display: flex; align-items: center; gap: 12px">
@@ -46,7 +46,7 @@
       </button>
     </nav>
     <!--------------------------------------------------------------------------------->
-    <section class="intro" style="display: flex; margin-bottom: 50px">
+    <section class="intro" style="display: flex; padding: 0 5%">
       <div style="width: 60%">
         <p>
           <span class="fontText" style="font-weight: 400"> Hello I’am</span
@@ -100,7 +100,7 @@
       <div><img width="700px" src="./images//Frame 20.png" alt="" /></div>
     </section>
     <!--------------------------------------------------------------------------------->
-    <section class="mySkills" style="margin-bottom: 100px">
+    <section class="mySkills">
       <p id="skills" style="text-align: center; padding-bottom: 20px">
         <span class="fontText" style="font-weight: 400">my</span
         ><span class="fontText" style="font-weight: 700"> Skills</span>
@@ -213,7 +213,7 @@
     <section
       class="aboutMe"
       id="aboutMe"
-      style="display: flex; gap: 25px; margin-top: 80px; margin-bottom: 80px"
+      style="display: flex; gap: 25px; padding: 0 5%"
     >
       <div>
         <img src="./images/Group 1000015845.png" alt="logo" />
@@ -324,7 +324,7 @@
       </div>
     </section>
     <!----------------------------------certificate----------------------------------------------->
-    <section id="certificate" class="mySkills" style="margin-bottom: 100px">
+    <section id="certificate" class="mySkills">
       <p id="skills" style="text-align: center; padding-bottom: 20px">
         <span class="fontText" style="font-weight: 400">my</span
         ><span class="fontText" style="font-weight: 700"> Testimony</span>
@@ -489,6 +489,27 @@
     <section id="contactMe">
       <p>fffffffffffffffffff</p>
     </section>
+    <!------------------------------------------------------------------------------------->
+    <footer>
+      <div style="display: flex; gap: 14px; align-items: center">
+        <img src="./images/footer.png" alt="logo" width="20" height="30" />
+        <p class="text1">Personal</p>
+      </div>
+
+      <p class="text1">made by Oussama Taboubi</p>
+
+      <div>
+        <p class="text2">
+          @2024-2025 Personal <br />
+          Designer:
+          <a
+            style="text-decoration: none; color: #a1a5ad"
+            href="https://www.figma.com/community/file/1318529372146880502/illustration-based-portfolio-website-template"
+            >@Jhanvi Shah</a
+          >
+        </p>
+      </div>
+    </footer>
     <script src="Scroll.js"></script>
   </body>
 </html>
