--- a/index.html
+++ b/index.html
@@ -486,8 +486,100 @@
       </div>
     </section>
     <!------------------------------------------------------------------------------------->
-    <section id="contactMe">
-      <p>fffffffffffffffffff</p>
+    <section id="contactMe" class="contactMe">
+      <div>
+        <form
+          action="https://formspree.io/f/xrgnagdj"
+          method="POST"
+          style="display: flex; flex-direction: column; gap: 15px"
+          method="post"
+        >
+          <input
+            type="text"
+            name="Name"
+            id=""
+            placeholder="Your name"
+            required
+          />
+          <input
+            type="email"
+            name="Email"
+            id=""
+            placeholder="Your Email "
+            required
+          />
+          <input
+            type="text"
+            name="Subject"
+            id=""
+            placeholder="Your subject "
+            required
+          />
+          <textarea
+            name="description"
+            style="margin-bottom: 20px"
+            placeholder="How can I help?*"
+            cols="70"
+            rows="10"
+            required
+          ></textarea>
+          <div style="display: flex; justify-content: space-between">
+            <button type="submit">Get In Touch</button>
+            <button type="reset">
+              <div class="social_media">
+                <i class="fa-regular fa-trash-can"></i>
+              </div>
+            </button>
+
+            <a
+              style="color: black"
+              target="_blank"
+              href="https://www.facebook.com/profile.php?id=100069930937977"
+              ><div class="social_media">
+                <i class="fa-brands fa-facebook"></i></div
+            ></a>
+
+            <a
+              style="color: black"
+              target="_blank"
+              href="https://www.instagram.com/tb_oussema?igsh=MXBzZHI2NHlocjdx"
+              ><div class="social_media">
+                <i class="fa-brands fa-instagram"></i></div
+            ></a>
+
+            <a
+              style="color: black"
+              target="_blank"
+              href="https://github.com/taboubi-oussema"
+              ><div class="social_media">
+                <i class="fa-brands fa-github"></i></div
+            ></a>
+
+            <a
+              style="color: black"
+              target="_blank"
+              href="https://www.linkedin.com/in/taboubi-oussema/"
+              ><div class="social_media">
+                <i class="fa-brands fa-linkedin-in"></i></div
+            ></a>
+          </div>
+        </form>
+      </div>
+      <div class="container">
+        <p>
+          <span class="fontText" style="font-weight: 700"
+            >Let’s <i>talk</i> for <br />
+            Something special</span
+          >
+        </p>
+
+        <p class="font3">
+          I seek to push the limits of creativity to create high-engaging,
+          user-friendly, and memorable interactive experiences.
+        </p>
+        <p class="text">taboubioussema78@gmail.com</p>
+        <p class="text">53 121 677</p>
+      </div>
     </section>
     <!------------------------------------------------------------------------------------->
     <footer>
