--- a/index.html
+++ b/index.html
@@ -46,8 +46,16 @@
       </button>
     </nav>
     <!--------------------------------------------------------------------------------->
-    <section class="intro" style="display: flex; padding: 0 5%">
-      <div style="width: 60%">
+    <section
+      class="intro"
+      style="
+        display: flex;
+        padding: 0 5%;
+        flex-wrap: wrap-reverse;
+        justify-content: center;
+      "
+    >
+      <div>
         <p>
           <span class="fontText" style="font-weight: 400"> Hello I’am</span
           ><span class="fontText" style="font-weight: 700"> Oussama .</span>
@@ -97,7 +105,7 @@
           ></a>
         </div>
       </div>
-      <div><img width="700px" src="./images//Frame 20.png" alt="" /></div>
+      <img width="700px" src="./images//Frame 20.png" alt="" />
     </section>
     <!--------------------------------------------------------------------------------->
     <section class="mySkills">
@@ -213,12 +221,18 @@
     <section
       class="aboutMe"
       id="aboutMe"
-      style="display: flex; gap: 25px; padding: 0 5%"
+      style="
+        display: flex;
+        gap: 25px;
+        padding: 0 5%;
+        flex-wrap: wrap;
+        justify-content: center;
+      "
     >
       <div>
         <img src="./images/Group 1000015845.png" alt="logo" />
       </div>
-      <div>
+      <div style=" width: 50%">
         <p style="padding-bottom: 50px">
           <span class="fontText" style="font-weight: 400"> About</span
           ><span class="fontText" style="font-weight: 700"> Me </span>
