--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--------------------------------------------------------------------------------->
     <nav class="container_Nav">
       <div style="display: flex; align-items: center; gap: 12px">
-        <img src="./images/Vector.png" alt="logo" width="20" height="30" />
+        <img src="./images/Vector.png" alt="logo" width="20" />
         <p class="textStyle">Personal</p>
       </div>
       <ul style="display: flex; list-style: none">
@@ -68,7 +68,7 @@
           <span class="fontText" style="font-weight: 400">Based In </span
           ><span class="fontText" style="font-weight: 700"> Tunisia.</span>
         </p>
-        <p style="padding-bottom: 90px; line-height: 34px">
+        <p class="paragraph" style="padding-bottom: 90px">
           Whether you looking to build a new website or rescue a failed web
           project,<br />
           My website design consulting service will provide you with
@@ -232,7 +232,7 @@
       <div>
         <img src="./images/Group 1000015845.png" alt="logo" />
       </div>
-      <div style=" width: 50%">
+      <div style="width: 50%">
         <p style="padding-bottom: 50px">
           <span class="fontText" style="font-weight: 400"> About</span
           ><span class="fontText" style="font-weight: 700"> Me </span>
@@ -477,7 +477,7 @@
         <div class="wrapper">
           <img class="certificate" src="images/certificate/gomycode.jpg" />
           <div class="effect">
-            <h4>gomycode</h4>
+            <h4>gomycode <br /><span style="font-size: 12px"> python</span></h4>
           </div>
         </div>
 
