--- a/index.html
+++ b/index.html
@@ -160,9 +160,8 @@
       class="myExperience"
       style="
         background-color: black;
-        justify-content: center;
-        align-items: center;
         display: flex;
+        align-items: center;
         flex-direction: column;
       "
     >
@@ -218,21 +217,11 @@
       </div>
     </section>
     <!--------------------------------------------------------------------------------->
-    <section
-      class="aboutMe"
-      id="aboutMe"
-      style="
-        display: flex;
-        gap: 25px;
-        padding: 0 5%;
-        flex-wrap: wrap;
-        justify-content: center;
-      "
-    >
-      <div>
-        <img src="./images/Group 1000015845.png" alt="logo" />
-      </div>
-      <div style="width: 50%">
+    <section class="aboutMe" id="aboutMe">
+      <img src="./images/Group 1000015845.png" alt="logo" width="100%"/>
+     
+
+       <div >
         <p style="padding-bottom: 50px">
           <span class="fontText" style="font-weight: 400"> About</span
           ><span class="fontText" style="font-weight: 700"> Me </span>
@@ -345,9 +334,30 @@
       </p>
       <div class="container">
         <div class="wrapper">
+          <img class="certificate" src="images/certificate/gomycode.jpg" />
+          <div class="effect">
+            <h4>python</h4>
+          </div>
+        </div>
+
+        <div class="wrapper">
+          <img class="certificate" src="images/certificate/cer_page-0001.jpg" />
+          <div class="effect">
+            <h4>html</h4>
+          </div>
+        </div>
+
+        <div class="wrapper">
           <img class="certificate" src="images/certificate/GIT.png" />
           <div class="effect">
             <h4>git</h4>
+          </div>
+        </div>
+
+        <div class="wrapper">
+          <img class="certificate" src="images/certificate/gg_page-0001.jpg" />
+          <div class="effect">
+            <h4>python</h4>
           </div>
         </div>
 
@@ -475,13 +485,6 @@
         </div>
 
         <div class="wrapper">
-          <img class="certificate" src="images/certificate/gomycode.jpg" />
-          <div class="effect">
-            <h4>gomycode <br /><span style="font-size: 12px"> python</span></h4>
-          </div>
-        </div>
-
-        <div class="wrapper">
           <img
             class="certificate"
             src="images/certificate/cyber security.jpg"
@@ -495,6 +498,13 @@
           <img class="certificate" src="images/certificate/javascript.png" />
           <div class="effect">
             <h4>javascript</h4>
+          </div>
+        </div>
+
+        <div class="wrapper">
+          <img class="certificate" src="images/certificate/bootstrap.png" />
+          <div class="effect">
+            <h4>Bootstrap</h4>
           </div>
         </div>
       </div>
