--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
         display: flex;
         align-items: center;
         flex-direction: column;
+        justify-content: center;
       "
     >
       <p style="padding: 20px">
@@ -218,10 +219,10 @@
     </section>
     <!--------------------------------------------------------------------------------->
     <section class="aboutMe" id="aboutMe">
-      <img src="./images/Group 1000015845.png" alt="logo" width="100%"/>
+      <img src="./images/Group 1000015845.png" alt="logo" />
      
 
-       <div >
+       <div style="width: 50%;">
         <p style="padding-bottom: 50px">
           <span class="fontText" style="font-weight: 400"> About</span
           ><span class="fontText" style="font-weight: 700"> Me </span>
