--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
     </section>
     <!--------------------------------------------------------------------------------->
     <section class="aboutMe" id="aboutMe">
-      <img src="./images/Group 1000015845.png" alt="logo" class="photo" />
+     <div class="center"> <img src="./images/Group 1000015845.png" alt="logo" class="photo " /></div>
 
-      <div style="width: 50%">
+      <div >
         <p style="padding-bottom: 50px">
           <span class="fontText" style="font-weight: 400"> About</span
           ><span class="fontText" style="font-weight: 700"> Me </span>
